<resources>
    <string name="app_name">Chatter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register_now">Don\'t have an account yet? Register now!</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="register">Register</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="splash_screen">SPLASH SCREEN</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="continue_text">Continue</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="when_is_your_birthday">When is your birthday?</string>
    <string name="what_is_your_gender">What is your gender?</string>
    <string name="enter_your_e_mail_address">Enter your e-mail address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="weak">Weak</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="new_post_fragment">New Post Fragment</string>
    <string name="notifications_fragment">Notifications Fragment</string>
    <string name="what_is_on_your_mind">What is on your mind?</string>
    <string name="content_description">Content Description</string>
    <string name="likes">Likes:</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="submit">Submit</string>
</resources>